--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.3.0",
+    "react-multi-carousel": "^2.8.5",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
